1.0.2: Refactoring; Modify collision of zabuton